--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@
 server.port=8080
 #应用程序上下文路径
 server.context-path=/sample
+
+
+
+#自定义配置
+my.name=liujk
+my.age=28
+my.phone=${random.value}
+
+
+tom.name=Tom Jackson
+tom.age=30
+tom.phone=${random.value}
