fix：jar文件名修改

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>spring-boot-sample.jar</finalName>
+        <finalName>spring-boot-sample</finalName>
     </build>
 
 
